--- a/templates/marg/MargAI/results.html
+++ b/templates/marg/MargAI/results.html
@@ -1,8 +1,12 @@
 {% extends 'marg/base.html' %} {% load static %} {% block extra_css %}
+{% load static %}
 <link rel="stylesheet" href="{% static 'marg/assets/css/results.css' %}" />
 {% endblock %} {% block content %}
 
-<div class="results-card">
+
+
+
+<div class="results-card" >
   <h1>🎓 Your Top Carrear Recommendations</h1>
   {% if recommendations %}
   <ul class="list-group">
