--- a/templates/marg/base.html
+++ b/templates/marg/base.html
@@ -1,22 +1,24 @@
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  {% load static %}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="{% static 'marg/assets/css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'marg/assets/base.css' %}">
+  <meta charset="UTF-8">
+  <title>{% block title %}My Site{% endblock %}</title>
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="{% static 'marg/assets/css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'marg/assets/img/favicon.ico' %}">
+
+  
   {% block extra_css %}{% endblock %}
 </head>
-
 <body>
-    <h1>Home page</h1>
-  
-  <!-- {% include "marg/header.html" %} -->
+  <!-- Example site header -->
+  <h1>Home page</h1>
 
   {% block content %}{% endblock %}
-  
-  <!-- {% include 'marg/footer.html' %} -->
 
-<script src="{% static 'marg/assets/js/bootstrap.bundle.min.js' %}"></script>
-  </body>
+  <!-- <script src="{% static 'marg/assets/js/bootstrap.bundle.min.js' %}"></script> -->
   {% block extra_js %}{% endblock %}
-
 </body>
+</html>
